# SHAFFT

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build_doxygen.yml  fftw-tests.yml
cmake/: FindCrayGTL.cmake  Findmpi_gtl_hsa.cmake  GputtDependency.cmake  HipfortDependency.cmake  Tooling.cmake  shafftConfig.cmake.in  shafft_config.h.in
cmake/test-craygtl/: CMakeLists.txt  test.sh
docs/: Doxyfile  DoxygenLayout.xml  api_groups.dox  backends.dox  decomposition.dox  fortran_constants.dox  fortran_interfaces.dox  getting-started.dox  limitations.dox  linking.dox  tensor-layout.dox  user-guide.dox
examples/: CMakeLists.txt  example.c  example.cpp  example.f03  example_FFT1D.cpp  example_portable.c  example_portable.cpp  example_portable.f03  example_portable_config.c  example_portable_config.cpp  example_portable_config.f03
include/shafft/: shafft.h  shafft.hpp  shafft_enums.hpp  shafft_error.hpp  shafft_types.hpp
include/shafft/detail/: fft_base.hpp  slab_base.hpp
src/c/: .clang-tidy  CMakeLists.txt  shafftc.cpp
src/cpp/: CMakeLists.txt  _shafft.cpp  _shafft.hpp  comm_dims.cpp  comm_dims.h  config_info.cpp  configuration.cpp  shafft.cpp  shafft_error.cpp  shafft_internal.cpp  shafft_internal.hpp  slab.cpp  slab_nd.cpp
src/cpp/detail/: array_utils.hpp  buffer_utils.hpp  cartesian.hpp  config_info.hpp  error_macros.hpp  partition.hpp  plan_1d_data.hpp  plan_data_base.hpp  plan_nd_data.hpp  slab_1d.hpp  slab_nd.hpp
src/cpp/fft/common/: diag.hpp
src/cpp/fft/fftw_method/: fft1d_handle.hpp  fft1d_method.cpp  fft1d_method.hpp  fft_method.cpp  fft_method.h  ffthandle.h  fftnd_handle.hpp  fftnd_method.cpp  fftnd_method.hpp  normalize.cpp  normalize.h
src/cpp/fft/fftw_method/common/: env.hpp  normalize.cpp  normalize.hpp
src/cpp/fft/hipfft_method/: fft1d_handle.hpp  fft1d_method.hip  fft1d_method.hpp  fft_method.cpp  fft_method.h  ffthandle.h  fftnd_handle.hpp  fftnd_method.cpp  fftnd_method.hpp  hipcheck.h  normalize.h  normalize.hip  transpose_fft.cpp  transpose_fft.h  transpose_fft.hpp
src/cpp/fft/hipfft_method/1d/: fft1d_bluestein_executor.hip  fft1d_common.hip  fft1d_cooley_tukey_executor.hip  fft1d_path_selector.hpp
src/cpp/fft/hipfft_method/common/: hipcheck.hpp  normalize.hip  normalize.hpp
src/cpp/fft/hipfft_method/nd/: transpose_fftnd.cpp  transpose_fftnd.hpp
src/f03/: CMakeLists.txt  shafft.f03  shafftf03.cpp  shafftf03.h
tests/: CMakeLists.txt
tests/component/: test_transpose_fft.cpp
tests/include/: test_utils.f90  test_utils.h  test_utils.hpp
tests/integration/c/: test_c_FFT1D.c  test_c_api.c  test_c_roundtrip.c
tests/integration/cpp/: test_FFT1D_roundtrip.cpp  test_axes.cpp  test_backend.cpp  test_configuration.cpp  test_configuration_modes.cpp  test_correctness.cpp  test_delta.cpp  test_double.cpp  test_errors.cpp  test_getbuffers.cpp  test_highdim.cpp  test_inactive_ranks.cpp  test_initcart.cpp  test_layout.cpp  test_roundtrip.cpp
tests/integration/fortran/: test_f03_api.f03  test_f03_config.f03  test_f03_roundtrip.f03
tests/unit/: test_FFT1D.cpp  test_config_1d.cpp  test_config_nd.cpp  test_configuration_nd.cpp  test_error_api.cpp  test_fft_highdim.cpp  test_fft_partial.cpp  test_fft_partial_fftw.cpp  test_hipfft_method.cpp  test_library_info.cpp  test_memory.cpp  test_superbatch_threshold.cpp
